--- a/CSS_WorkSpace/public/05/d05_02.html
+++ b/CSS_WorkSpace/public/05/d05_02.html
@@ -6,12 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        h1 {
-            background-color: yellow;
-            color: orange;
-        }
-    </style>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
@@ -20,25 +14,32 @@
 
 <body>
     <nav class="navbar">
-        <h1>d05_01.html</h1>
+        <h2>js function 예제2</h2>
     </nav>
     <div class="container">
-        <h3>js fuction 구현 실습</h3>
-        <button class="button">btn</button>
 
     </div>
 
     <script>
-        var h3tag = document.getElementsByTagName("h3")[0];
-        console.log(h3tag);
-        h3tag.style.color = "red";
+        function fn01(name) {
+            console.log("Function1 호출 : " + name);
+            console.dir(arguments);
+            for (var i = 0; i < arguments.length; i++) {
+                console.log(`arguments${i} : ` + arguments[i].toString());
+            }
+        }
 
-        var btn = document.getElementsByClassName("button")[0];
-        btn.addEventListener("click", (event) => {
-            btn.style.backgroundColor = "yellowgreen";
-            h3tag.style.backgroundColor = "black";
-            h3tag.style.color = "yellow";
-        });
+        var fn02 = (...args) => {
+            console.log("Function2 호출 : ");
+            console.dir(args);
+            args.forEach((item, i) => {
+                console.log(item, i);
+            });
+        };
+
+        fn01("test", 33);
+        fn02(111, 333);
+
     </script>
 </body>
 
